Fix select2 component alignment

--- a/ckanext/ckanext-sixodp/ckanext/sixodp/fanstatic/css/sixodp_theme.css
+++ b/ckanext/ckanext-sixodp/ckanext/sixodp/fanstatic/css/sixodp_theme.css
@@ -11822,31 +11822,31 @@ form .form-group .input-group.has-validation > .form-floating:nth-last-child(n+3
     display: none !important;
   }
 }
-.tags .tag-list li a, .btn, .select2-container .select2-choices .select2-search-choice,
-.select2-container .select2-choice .select2-search-choice,
-.select2-container-multi .select2-choices .select2-search-choice,
-.select2-container-multi .select2-choice .select2-search-choice {
+.tags .tag-list li a, .btn, .select2-container .select2-choices li.select2-search-choice,
+.select2-container .select2-choice li.select2-search-choice,
+.select2-container-multi .select2-choices li.select2-search-choice,
+.select2-container-multi .select2-choice li.select2-search-choice {
   font-weight: 300;
   transition: all 0.2s ease-in-out;
 }
 
-.select2-container .select2-choices .select2-search-choice,
-.select2-container .select2-choice .select2-search-choice,
-.select2-container-multi .select2-choices .select2-search-choice,
-.select2-container-multi .select2-choice .select2-search-choice {
+.select2-container .select2-choices li.select2-search-choice,
+.select2-container .select2-choice li.select2-search-choice,
+.select2-container-multi .select2-choices li.select2-search-choice,
+.select2-container-multi .select2-choice li.select2-search-choice {
   background-color: #534f97;
   color: #ffffff;
 }
-.select2-container .select2-choices .select2-search-choice:focus,
-.select2-container .select2-choice .select2-search-choice:focus,
-.select2-container-multi .select2-choices .select2-search-choice:focus,
-.select2-container-multi .select2-choice .select2-search-choice:focus, .select2-container .select2-choices .select2-search-choice:active,
-.select2-container .select2-choice .select2-search-choice:active,
-.select2-container-multi .select2-choices .select2-search-choice:active,
-.select2-container-multi .select2-choice .select2-search-choice:active, .select2-container .select2-choices .select2-search-choice:hover,
-.select2-container .select2-choice .select2-search-choice:hover,
-.select2-container-multi .select2-choices .select2-search-choice:hover,
-.select2-container-multi .select2-choice .select2-search-choice:hover {
+.select2-container .select2-choices li.select2-search-choice:focus,
+.select2-container .select2-choice li.select2-search-choice:focus,
+.select2-container-multi .select2-choices li.select2-search-choice:focus,
+.select2-container-multi .select2-choice li.select2-search-choice:focus, .select2-container .select2-choices li.select2-search-choice:active,
+.select2-container .select2-choice li.select2-search-choice:active,
+.select2-container-multi .select2-choices li.select2-search-choice:active,
+.select2-container-multi .select2-choice li.select2-search-choice:active, .select2-container .select2-choices li.select2-search-choice:hover,
+.select2-container .select2-choice li.select2-search-choice:hover,
+.select2-container-multi .select2-choices li.select2-search-choice:hover,
+.select2-container-multi .select2-choice li.select2-search-choice:hover {
   background-color: #6d69b0;
   color: #ffffff;
 }
@@ -15313,13 +15313,13 @@ select {
 .select2-container .select2-choice input,
 .select2-container-multi .select2-choices input,
 .select2-container-multi .select2-choice input {
-  height: 0.624rem;
+  height: 2rem;
   line-height: 1.5;
 }
-.select2-container .select2-choices .select2-search-choice,
-.select2-container .select2-choice .select2-search-choice,
-.select2-container-multi .select2-choices .select2-search-choice,
-.select2-container-multi .select2-choice .select2-search-choice {
+.select2-container .select2-choices li.select2-search-choice,
+.select2-container .select2-choice li.select2-search-choice,
+.select2-container-multi .select2-choices li.select2-search-choice,
+.select2-container-multi .select2-choice li.select2-search-choice {
   background-image: none;
   padding: 5px 5px 5px 18px;
 }
